dom/base/RadioGroupContainer.cpp
@@ -8,6 +8,7 @@
 #include "mozilla/dom/RadioGroupContainer.h"
 #include "mozilla/dom/TreeOrderedArrayInlines.h"
 #include "mozilla/Assertions.h"
+#include "nsIFrame.h"
 #include "nsIRadioVisitor.h"
 #include "nsRadioVisitor.h"
 
@@ -125,7 +126,9 @@ nsresult RadioGroupContainer::GetNextRadioButton(
       index = 0;
     }
     radio = radioGroup->mRadioButtons->ElementAt(index);
-  } while (radio->Disabled() && radio != currentRadio);
+  } while ((radio->Disabled() || !radio->GetPrimaryFrame() ||
+            !radio->GetPrimaryFrame()->IsVisibleConsideringAncestors()) &&
+           radio != currentRadio);
 
   radio.forget(aRadioOut);
   return NS_OK;
@@ -135,7 +138,8 @@ HTMLInputElement* RadioGroupContainer::GetFirstRadioButton(
     const nsAString& aName) {
   nsRadioGroupStruct* radioGroup = GetOrCreateRadioGroup(aName);
   for (HTMLInputElement* radio : radioGroup->mRadioButtons.AsList()) {
-    if (!radio->Disabled()) {
+    if (!radio->Disabled() && radio->GetPrimaryFrame() &&
+        radio->GetPrimaryFrame()->IsVisibleConsideringAncestors()) {
       return radio;
     }
   }
